Swagads is added

--- a/new.html
+++ b/new.html
@@ -18,7 +18,7 @@
             <h4>tigray cites</h4>
             <ul>
                 <li>mekelle</li>
-                <li>adigrat</li>
+                <li>adigrat(Adi Swagads)</li>
                 <li>maychew
                     <ul>
                         <li>laelay maychew</li>
