--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
     <html lnag="en">
         <head>
             <meta charset="utf-8"/>
-            <title>Tigray country not regiong</title>
+            <title>Tigray country not region</title>
             <meta name ="description" content="tigray is the strongest region in the world"/>
             <meta name ="keywords"content="Ethiopian resgion"/>
         </head>
