--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact Registration form </title>   
+    <title>Contact Registration form  and id </title>   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Registrationform software trainnees."/>
     <meta name="keywords" content="software training software, full stack developer, backend developer">
