modified one but to zola

--- a/new.html
+++ b/new.html
@@ -19,7 +19,8 @@
             <ul>
                 <li>mekelle</li>
                 <li>adigrat(Adi Swagads)</li>
-                <li>maychew
+                <li>mekelle</li>
+                <li>diredawa
                     <ul>
                         <li>laelay maychew</li>
                         <li>tahtay maychew</li>
