--- a/new.html
+++ b/new.html
@@ -20,7 +20,7 @@
                 <li>mekelle</li>
                 <li>adigrat(Adi Swagads)</li>
                 <li>mekelle</li>
-                <li>diredawa
+                <li>diredawa and harer
                     <ul>
                         <li>laelay maychew</li>
                         <li>tahtay maychew</li>
